[package]
name = "diesel_compile_tests"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]

[workspace]

[dependencies]
diesel = { version = "2.0.0", default-features = false, features = ["extras", "sqlite", "postgres", "mysql", "unstable"], path = "../diesel" }
compiletest_rs = { version = "=0.3.22" }

[replace]
"diesel_derives:1.4.1" = { path = "../diesel_derives" }
